# isideload

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
apple-private-apis/: Cargo.toml
apple-private-apis/icloud-auth/: Cargo.toml
apple-private-apis/icloud-auth/rustcrypto-srp/: Cargo.toml
apple-private-apis/icloud-auth/src/: client.rs
apple-private-apis/icloud-auth/tests/: auth_debug.rs  gsa_auth.rs
apple-private-apis/omnisette/: Cargo.toml
apple-private-apis/omnisette/src/: adi_proxy.rs  remote_anisette_v3.rs  store_services_core.rs
examples/minimal/: .gitignore  Cargo.toml  README.md
examples/minimal/src/: main.rs
isideload/: Cargo.toml  README.md
isideload/src/: application.rs  bundle.rs  certificate.rs  developer_session.rs  device.rs  lib.rs  sideload.rs
isideload/src/anisette/: data.rs  mod.rs  remote_v3.rs
isideload/src/anisette/remote_v3/: mod.rs  state.rs  websocket.rs
isideload/src/auth/: apple_account.rs  builder.rs  grandslam.rs  mod.rs  wasm_middleware.rs
isideload/src/dev/: app_groups.rs  app_ids.rs  certificates.rs  developer_session.rs  device_type.rs  devices.rs  mod.rs  structures.rs  teams.rs
isideload/src/sideload/: application.rs  builder.rs  bundle.rs  cert_identity.rs  certificate.rs  config.rs  install.rs  mod.rs  sideloader.rs  sign.rs
isideload/src/util/: device.rs  fs_storage.rs  keyring_storage.rs  mod.rs  plist.rs  storage.rs
src/: application.rs  certificate.rs  developer_session.rs  device.rs  lib.rs  sideload.rs
