[workspace]
resolver = "2"
members = ["examples/minimal","isideload"]
default-members = ["isideload"]

[patch.crates-io]
rustls-platform-verifier = { git = "https://github.com/cstkingkey/rustls-platform-verifier", branch = "extra" }
plist-macro = { git = "https://github.com/nab138/plist_macro", branch = "master" }