[package]
name = "icloud_auth"
version = "0.1.0"
edition = "2021"

[features]
default = []
vendored-botan = ["botan/vendored"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
base64 = "0.22"
srp = { version = "0.6.0", path = "./rustcrypto-srp" }
pbkdf2 = "0.11"
sha2 = "0.10"
rand = "0.9"
rustls = "0.23"
rustls-pemfile = "2.2"
plist = "1.7.2"
hmac = "0.12.1"
num-bigint = "0.4.3"
cbc = { version = "0.1.2", features = ["std"] }
aes = "0.8.2"
pkcs7 = "0.4.1"
reqwest = { version = "0.11.14", features = ["blocking", "json", "default-tls"] }
omnisette = {path = "../omnisette", features = ["remote-anisette-v3"]}
thiserror = "2"
tokio = "1"
botan = "0.12.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
