[package]
name = "minimal"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
isideload = { path = "../../isideload", features = ["vendored-openssl", "vendored-botan"] }
idevice = { version = "0.1.37", features = ["usbmuxd"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
